# franka_control

./: CMakeLists.txt  README.md  package.xml
examples/: CMakeLists.txt  avatar_panda.cpp  two_arm_teleop.cpp
include/: avatar_panda.hpp
msg/: PInfo.msg  PTIPacket.msg
