<?xml version="1.0"?>
<package format="3">
  <name>franka_control</name>
  <version>0.0.0</version>
  <description>The franka_control package</description>
  <maintainer email="lynn@todo.todo">lynn</maintainer>
  <license>TODO</license>

  <!-- ROS 2 uses ament_index_python and ament_cmake as build tools instead of catkin -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- In ROS 2, dependencies are managed slightly differently. -->
  <!-- For example, roscpp is replaced by rclcpp for C++ clients. -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <!-- If your package generates custom messages or services, include these dependencies -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>builtin_interfaces</depend>


  <!-- In ROS 2, the export tag is used differently and is often not needed for basic packages. -->
  <!-- If you have specific interfaces or plugins, you might need to use it. -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
